--- a/Programmers/Lv 0 : 사칙연산(4).md
+++ b/Programmers/Lv 0 : 사칙연산(4).md
@@ -1,7 +1,7 @@
 // comments : 😎 1월 목표 = PGS Lv.0 100문제 모두 풀기
 
-두 수의 합
-```
+**두 수의 합**
+```cpp
 int solution(int num1, int num2) {
     int answer = -1;
     answer = num1 + num2;
@@ -9,8 +9,8 @@ int solution(int num1, int num2) {
 }
 ```
 
-두 수의 차
-```
+**두 수의 차**
+```cpp
 int solution(int num1, int num2) {
     int answer = 0;
     answer = num1 - num2;
@@ -18,8 +18,8 @@ int solution(int num1, int num2) {
 }
 ```
 
-두 수의 곱
-```
+**두 수의 곱**
+```cpp
 int solution(int num1, int num2) {
     int answer = 0;
     answer = num1 * num2;
@@ -27,8 +27,8 @@ int solution(int num1, int num2) {
 }
 ```
 
-몫 구하기
-```
+**몫 구하기**
+```cpp
 int solution(int num1, int num2) {
     int answer = 0;
     answer = num1/num2;
