Lv 0 : 수학, 문자열, 해시, 완전탐색, 조건문(4)

--- a/Programmers/Lv 0 : 수학, 문자열, 해시, 완전탐색, 조건문(4).md
+++ b/Programmers/Lv 0 : 수학, 문자열, 해시, 완전탐색, 조건문(4).md
@@ -72,3 +72,23 @@ int solution(int balls, int share) {
 ```
 
 - 위 코드로 테스트35만 실패한다,,, 아직 원인 못찾음 ㅠㅠ
+
+→ 해결
+
+```cpp
+long long solution(int balls, int share) {
+    double answer = 1;
+    int nm = balls - share;
+    for(int i=nm+1; i<=balls; ++i){
+        answer *= i;
+    }
+    cout << answer;
+    for(int i=2; i<=share; ++i){
+        answer /= i;
+    }
+    return answer;
+}
+```
+
+- $n!/(n-m)!*m!$ 여기서 순서만 바꾸었는데 성공…뭐가 문제였을까
+- 아무래도 범위 문제였을 가능성?
