Lv 0 : 수학, 반복문(4)

--- a/Programmers/Lv 0 : 수학, 반복문(4).md
+++ b/Programmers/Lv 0 : 수학, 반복문(4).md
@@ -1,4 +1,4 @@
-주사위의 개수
+**주사위의 개수**
 
 ```cpp
 int solution(vector<int> box, int n) {
@@ -10,7 +10,7 @@ int solution(vector<int> box, int n) {
 }
 ```
 
-합성수 찾기
+**합성수 찾기**
 
 ```cpp
 int solution(int n) {
@@ -27,7 +27,7 @@ int solution(int n) {
 }
 ```
 
-최댓값 만들기 (1)
+**최댓값 만들기 (1)**
 
 ```cpp
 int solution(vector<int> numbers) {
@@ -38,7 +38,7 @@ int solution(vector<int> numbers) {
 }
 ```
 
-팩토리얼
+**팩토리얼**
 
 ```cpp
 int solution(int n) {
@@ -52,3 +52,18 @@ int solution(int n) {
 ```
 
 - 테스트 1,2,3 실패…왜틀리지
+
+→ for문 i의 범위를 고치니까 맞았다!
+
+```cpp
+int solution(int n) {
+    int tmp=1;
+    for(int i=1; i<12; ++i){
+        tmp *= i;
+        if(tmp>n) return i-1;
+    }
+    return 0;
+}
+```
+
+- 제한사항 때문에 답의 최대값이 10이므로 범위를 11이하(12미만)로 설정해주어야 했던 것 같다.
